@@ -1,0 +1,13 @@
+#
+# This is a configuration file for automatic testing for sensorfw.
+#
+
+[als]
+path = /tmp/fakedsensors/als_rm696
+
+[accelerometer]
+device = /tmp/fakedsensors/accelerometer
+poll_file = /tmp/fakedsensors/accelerometer_poll_rate
+
+[context]
+orientation_offset = 0
