@@ -1,13 +1,0 @@
-#
-# This is a configuration file for automatic testing for sensorfw.
-#
-
-# ALS adaptor
-als_dev_path_rm680 = /tmp/fakedsensors/als
-als_dev_path_rm696 = /tmp/fakedsensors/als_rm696
-
-dev_accelerometer = /tmp/fakedsensors/accelerometer
-dev_poll_accelerometer = /tmp/fakedsensors/accelerometer_poll_rate
-
-# Dynamically created dataset, don't use offset.
-orientation_offset = 0
